# mc-localize

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
.maintainerkit/: config.json
.maintainerkit/prompts/: plan.md  triage.md
docs/: architecture.md  maintenance.md  testing.md
src/mc_localize/: __init__.py  build_resource_pack.py  catalog.py  cli.py  export_workfiles.py  install_guide.py  instance.py  key_classification.py  lang_metadata.py  reports.py  scan.py  selection.py  translations.py  validate.py
src/mc_localize/extractors/: __init__.py  lang_json.py
tests/: test_phase1.py
